[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.0"
jieba = "0.42.1"
matplotlib = "3.3.0"
wordcloud = "^1.7.0"
imageio = "2.9.0"
snownlp = "0.12.3"
itchat = "1.3.10"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
